--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ body {
     height: 100vh;
     /*background-color: rgba(7, 162, 220, 0.99);*/
     background-image: url("../images/image6.jpg");
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -116,11 +117,13 @@ body {
 #group-1 > .base-layer{
     /*background-color: crimson;*/
     background-image: url("../images/image5.jpg");
+    background-repeat: no-repeat;
 }
 
 #group-2 > .mid-layer{
     /*background-color: teal;*/
     background-image: url("../images/image3.jpg");
+    background-repeat: no-repeat;
 }
 
 #outro{}
